# Bloom_filter

./: CMakeLists.txt  input.txt  main.c
Bloom/: bloom.c  bloom.h  bloomStruct.h
CommandLineAndFile/: cmdFile.c  cmdFile.h
Errors/: errors.c  errors.h
Hash/: hash.c  hash.h
Test/: test.c  test.h
